[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-lob-stream"
version = "0.7.0"
description = "Stream Level 2 order book and trade data from major crypto exchanges to local disk or GCS."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Goodness Chibueze Kalu", email = "drkalugoodness@gmail.com" }
]
keywords = ["cryptocurrency", "order-book", "LOB", "binance", "market-data", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies -- always installed
dependencies = [
    "websockets>=12.0",
    "pyarrow>=14.0",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Install with: pip install crypto-lob-stream[gcs]
gcs = [
    "google-cloud-storage>=2.0",
]
# Install everything
all = [
    "google-cloud-storage>=2.0",
]

[project.scripts]
crypto-lob-stream = "crypto_lob_stream.cli:main"

[project.urls]
Homepage = "https://github.com/Goodie-Goody/crypto_lob_stream_pypi"
Repository = "https://github.com/Goodie-Goody/crypto_lob_stream_pypi"
Issues = "https://github.com/Goodie-Goody/crypto_lob_stream_pypi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["crypto_lob_stream*"]